kubernetes/deployment.template.yaml
# The following variables are derived as follows by the pipeline. DO NOT CHANGE:
#
#   - NAMESPACE:    product
#   - SERVICE_NAME: product-component-branch
#   - IMAGE_NAME:   registry-name/hmcts/product-component:branch
#
# To keep this large file easier to maintain the following order of object declarations is imposed:
#
# 1. Namespace
# 2. ConfigMaps
# 3. Deployments & Services
# 4. Ingresses
#

---

#
# Namespace
#
apiVersion: v1
kind: Namespace
metadata:
  name: ${NAMESPACE}

---

#
# Deployment
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${SERVICE_NAME}
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${SERVICE_NAME}
  template:
    metadata:
      labels:
        app: ${SERVICE_NAME}
    spec:
      containers:
        - name: ${SERVICE_NAME}
          image: ${IMAGE_NAME}
          imagePullPolicy: Always
          resources:
            requests:
              memory: 256Mi
              cpu: 200m
            limits:
              memory: 512Mi
              cpu: 2000m
          ports:
            - containerPort: 4000
              name: http
          livenessProbe:
            tcpSocket:
              port: 4000
            initialDelaySeconds: 210
            periodSeconds: 20
      dnsConfig:
        options:
          - name: single-request-reopen

---

#
# Service
#
apiVersion: v1
kind: Service
metadata:
  name: ${SERVICE_NAME}
  namespace: ${NAMESPACE}
  labels:
    app: ${SERVICE_NAME}
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4000
  selector:
    app: ${SERVICE_NAME}

---

#
# SERVICE-AUTH-PROVIDER-API :: Deployment
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-auth-provider-api
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-auth-provider-api
  template:
    metadata:
      labels:
        app: service-auth-provider-api
    spec:
      containers:
        - name: service-auth-provider-api
          image: hmcts.azurecr.io/hmcts/rpe-service-auth-provider:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: 512Mi
              cpu: 200m
            limits:
              memory: 1024Mi
              cpu: 2000m
          ports:
            - containerPort: 8489
              name: http
          livenessProbe:
            tcpSocket:
              port: 8489
            initialDelaySeconds: 210
            periodSeconds: 20
      dnsConfig:
        options:
          - name: single-request-reopen

---

#
# SERVICE-AUTH-PROVIDER-API :: Service
#
apiVersion: v1
kind: Service
metadata:
  name: service-auth-provider-api
  namespace: ${NAMESPACE}
  labels:
    app: service-auth-provider-api
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8489
  selector:
    app: service-auth-provider-api

---

#
# IDAM-AUTHENTICATION-WEB :: Deployment
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: idam-authentication-web
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: idam-authentication-web
  template:
    metadata:
      labels:
        app: idam-authentication-web
    spec:
      containers:
        - name: idam-authentication-web
          image: docker.artifactory.reform.hmcts.net/auth/authentication-web:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: 64Mi
              cpu: 200m
            limits:
              memory: 256Mi
              cpu: 500m
          ports:
            - containerPort: 8000
              name: http
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 70
            periodSeconds: 20
      dnsConfig:
        options:
          - name: single-request-reopen

---

#
# IDAM-AUTHENTICATION-WEB :: Service
#
apiVersion: v1
kind: Service
metadata:
  name: idam-authentication-web
  namespace: ${NAMESPACE}
  labels:
    app: idam-authentication-web
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
  selector:
    app: idam-authentication-web

---

#
# IDAM-API :: Deployment
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: idam-api
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: idam-api
  template:
    metadata:
      labels:
        app: idam-api
    spec:
      containers:
        - name: idam-api
          image: docker.artifactory.reform.hmcts.net/auth/idam-api:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: 512Mi
              cpu: 200m
            limits:
              memory: 1024Mi
              cpu: 2000m
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 210
            periodSeconds: 20
      dnsConfig:
        options:
          - name: single-request-reopen

---

#
# IDAM-API :: Service
#
apiVersion: v1
kind: Service
metadata:
  name: idam-api
  namespace: ${NAMESPACE}
  labels:
    app: idam-api
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: idam-api

---

#
# CCD-CASE-MANAGEMENT-WEB :: Deployment
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ccd-case-management-web
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ccd-case-management-web
  template:
    metadata:
      labels:
        app: ccd-case-management-web
    spec:
      containers:
        - name: ccd-case-management-web
          image: hmcts.azurecr.io/hmcts/ccd-case-management-web:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: 64Mi
              cpu: 200m
            limits:
              memory: 256Mi
              cpu: 500m
          ports:
            - containerPort: 3451
              name: http
          livenessProbe:
            tcpSocket:
              port: 3451
            initialDelaySeconds: 70
            periodSeconds: 20
      dnsConfig:
        options:
          - name: single-request-reopen

---

#
# CCD-CASE-MANAGEMENT-WEB :: Service
#
apiVersion: v1
kind: Service
metadata:
  name: ccd-case-management-web
  namespace: ${NAMESPACE}
  labels:
    app: ccd-case-management-web
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3451
  selector:
    app: ccd-case-management-web

---

#
# CCD-API-GATEWAY :: Deployment
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ccd-api-gateway
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ccd-api-gateway
  template:
    metadata:
      labels:
        app: ccd-api-gateway
    spec:
      containers:
        - name: ccd-api-gateway
          image: hmcts.azurecr.io/hmcts/ccd-api-gateway-web:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: 64Mi
              cpu: 200m
            limits:
              memory: 256Mi
              cpu: 500m
          ports:
            - containerPort: 3453
              name: http
          livenessProbe:
            tcpSocket:
              port: 3453
            initialDelaySeconds: 70
            periodSeconds: 20
      dnsConfig:
        options:
          - name: single-request-reopen

---

#
# CCD-API-GATEWAY :: Service
#
apiVersion: v1
kind: Service
metadata:
  name: ccd-api-gateway
  namespace: ${NAMESPACE}
  labels:
    app: ccd-api-gateway
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3453
  selector:
    app: ccd-api-gateway

---

#
# CCD-USER-PROFILE-API :: Deployment
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ccd-user-profile-api
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ccd-user-profile-api
  template:
    metadata:
      labels:
        app: ccd-user-profile-api
    spec:
      containers:
        - name: ccd-user-profile-api
          image: hmcts.azurecr.io/hmcts/ccd-user-profile-api:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: 512Mi
              cpu: 200m
            limits:
              memory: 1024Mi
              cpu: 2000m
          ports:
            - containerPort: 4453
              name: http
          livenessProbe:
            tcpSocket:
              port: 4453
            initialDelaySeconds: 210
            periodSeconds: 20
      dnsConfig:
        options:
          - name: single-request-reopen

---

#
# CCD-USER-PROFILE-API :: Service
#
apiVersion: v1
kind: Service
metadata:
  name: ccd-user-profile-api
  namespace: ${NAMESPACE}
  labels:
    app: ccd-user-profile-api
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4453
  selector:
    app: ccd-user-profile-api

---

#
# CCD-DEFINITION-STORE-API :: Deployment
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ccd-definition-store-api
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ccd-definition-store-api
  template:
    metadata:
      labels:
        app: ccd-definition-store-api
    spec:
      containers:
        - name: ccd-definition-store-api
          image: hmcts.azurecr.io/hmcts/ccd-definition-store-api:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: 512Mi
              cpu: 200m
            limits:
              memory: 1024Mi
              cpu: 2000m
          ports:
            - containerPort: 4451
              name: http
          livenessProbe:
            tcpSocket:
              port: 4451
            initialDelaySeconds: 210
            periodSeconds: 20
      dnsConfig:
        options:
          - name: single-request-reopen

---

#
# CCD-DEFINITION-STORE-API :: Service
#
apiVersion: v1
kind: Service
metadata:
  name: ccd-definition-store-api
  namespace: ${NAMESPACE}
  labels:
    app: ccd-definition-store-api
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4451
  selector:
    app: ccd-definition-store-api

---

#
# CCD-DATA-STORE-API :: Deployment
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ccd-data-store-api
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ccd-data-store-api
  template:
    metadata:
      labels:
        app: ccd-data-store-api
    spec:
      containers:
        - name: ccd-data-store-api
          image: hmcts.azurecr.io/hmcts/ccd-data-store-api:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: 512Mi
              cpu: 200m
            limits:
              memory: 1024Mi
              cpu: 2000m
          ports:
            - containerPort: 4452
              name: http
          livenessProbe:
            tcpSocket:
              port: 4452
            initialDelaySeconds: 210
            periodSeconds: 20
      dnsConfig:
        options:
          - name: single-request-reopen

---

#
# CCD-DATA-STORE-API :: Service
#
apiVersion: v1
kind: Service
metadata:
  name: ccd-data-store-api
  namespace: ${NAMESPACE}
  labels:
    app: ccd-data-store-api
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4452
  selector:
    app: ccd-data-store-api

---

#
# DM-STORE :: Deployment
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dm-store
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dm-store
  template:
    metadata:
      labels:
        app: dm-store
    spec:
      containers:
        - name: dm-store
          image: hmcts.azurecr.io/hmcts/dm-store:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: 512Mi
              cpu: 200m
            limits:
              memory: 1024Mi
              cpu: 2000m
          ports:
            - containerPort: 4603
              name: http
          livenessProbe:
            tcpSocket:
              port: 4603
            initialDelaySeconds: 210
            periodSeconds: 20
      dnsConfig:
        options:
          - name: single-request-reopen

---

#
# DM-STORE :: Service
#
apiVersion: v1
kind: Service
metadata:
  name: dm-store
  namespace: ${NAMESPACE}
  labels:
    app: dm-store
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4603
  selector:
    app: dm-store

---

#
# SHARED-DATABASE :: Deployment
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shared-database
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shared-database
  template:
    metadata:
      labels:
        app: shared-database
    spec:
      containers:
        - name: shared-database
          image: hmcts.azurecr.io/hmcts/ccd-postgres:10.5-alpine
          imagePullPolicy: Always
          resources:
            requests:
              memory: 128Mi
              cpu: 200m
            limits:
              memory: 256Mi
              cpu: 1000m
          volumeMounts:
            - name: shared-database-data
              mountPath: /var/lib/postgresql/data
              subPath: data
          ports:
            - containerPort: 5432
              name: postgres
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 70
      volumes:
        - name: shared-database-data
          persistentVolumeClaim:
            claimName: shared-database-data
      dnsConfig:
        options:
          - name: single-request-reopen

---

#
# SHARED-DATABASE :: Service
#
apiVersion: v1
kind: Service
metadata:
  name: shared-database
  namespace: ${NAMESPACE}
  labels:
    app: shared-database
spec:
  ports:
    - port: 5432
  selector:
    app: shared-database

---

#
# SMTP-SERVER :: Deployment
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smtp-server
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smtp-server
  template:
    metadata:
      labels:
        app: smtp-server
    spec:
      containers:
        - name: smtp-server
          image: mailhog/mailhog:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: 16Mi
              cpu: 100m
            limits:
              memory: 32Mi
              cpu: 200m
          ports:
            - containerPort: 1025
              name: smtp-server
          livenessProbe:
            tcpSocket:
              port: 1025
            initialDelaySeconds: 10
      dnsConfig:
        options:
          - name: single-request-reopen

---

#
# SMTP-SERVER SERVICE
#
apiVersion: v1
kind: Service
metadata:
  name: smtp-server
  namespace: ${NAMESPACE}
  labels:
    app: smtp-server
spec:
  ports:
    - port: 1025
  selector:
    app: smtp-server

---

#
# Ingress
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${SERVICE_NAME}
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: ${SERVICE_FQDN}
      http:
        paths:
          - path: /
            backend:
              serviceName: ${SERVICE_NAME}
              servicePort: 80

---

#
# SERVICE-AUTH-PROVIDER-API :: Ingress
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: service-auth-provider-api
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: service-auth-provider-api-${SERVICE_FQDN}
      http:
        paths:
          - path: /
            backend:
              serviceName: service-auth-provider-api
              servicePort: 80

---

#
# IDAM-AUTHENTICATION-WEB :: Ingress
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: idam-authentication-web
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: idam-authentication-web-${SERVICE_FQDN}
      http:
        paths:
          - path: /
            backend:
              serviceName: idam-authentication-web
              servicePort: 80

---

#
# IDAM-API :: Ingress
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: idam-api
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: idam-api-${SERVICE_FQDN}
      http:
        paths:
          - path: /
            backend:
              serviceName: idam-api
              servicePort: 80

---

#
# CCD-CASE-MANAGEMENT-WEB :: Ingress
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ccd-case-management-web
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: ccd-case-management-web-${SERVICE_FQDN}
      http:
        paths:
          - path: /
            backend:
              serviceName: ccd-case-management-web
              servicePort: 80

---

#
# CCD-API-GATEWAY :: Ingress
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ccd-api-gateway
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: ccd-api-gateway-${SERVICE_FQDN}
      http:
        paths:
          - path: /
            backend:
              serviceName: ccd-api-gateway
              servicePort: 80

---

#
# CCD-DEFINITION-STORE-API :: Ingress
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ccd-definition-store-api
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: ccd-definition-store-api-${SERVICE_FQDN}
      http:
        paths:
          - path: /
            backend:
              serviceName: ccd-definition-store-api
              servicePort: 80

---

#
# CCD-USER_PROFILE-API :: Ingress
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ccd-user-profile-api
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: ccd-user-profile-api-${SERVICE_FQDN}
      http:
        paths:
          - path: /
            backend:
              serviceName: ccd-user-profile-api
              servicePort: 80
